--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
     // For Rust Analyzer plugin users:
     "rust-analyzer.cargo.target": "riscv64gc-unknown-none-elf",
     "rust-analyzer.checkOnSave.allTargets": false,
+    "cmake.sourceDirectory": "/workspaces/2024s-rcore-nusakom",
     // "rust-analyzer.cargo.features": [
     //     "board_qemu"
     // ]
