--- a/os/Makefile
+++ b/os/Makefile
@@ -34,32 +34,32 @@ build: env $(KERNEL_BIN)
 
 env:
 ifeq ($(OFFLINE),)
-	$(RUSTUP) target list | grep "riscv64gc-unknown-none-elf (installed)" ||$(RUSTUP) target add $(TARGET)
+	(rustup target list | grep "riscv64gc-unknown-none-elf (installed)") || rustup target add $(TARGET)
 	cargo install cargo-binutils
-	$(RUSTUP) component add rust-src
-	$(RUSTUP) component add llvm-tools-preview
+	rustup component add rust-src
+	rustup component add llvm-tools-preview
 endif
 
 $(KERNEL_BIN): kernel
-	@$(OBJCOPY) -O binary$(KERNEL_ELF) $@
+	@$(OBJCOPY) $(KERNEL_ELF) --strip-all -O binary $@
 
 kernel:
 	@make -C ../user build TEST=$(TEST) CHAPTER=$(CHAPTER) BASE=$(BASE)
+	@echo Platform: $(BOARD)
 	@cargo build $(MODE_ARG)
 
 clean:
 	@cargo clean
 
 disasm: kernel
-	@$(OBJDUMP)$(DISASM) $(KERNEL_ELF) | less
+	@$(OBJDUMP) $(DISASM) $(KERNEL_ELF) | less
 
 disasm-vim: kernel
-	@$(OBJDUMP)$(DISASM) $(KERNEL_ELF) >$(DISASM_TMP)
+	@$(OBJDUMP) $(DISASM) $(KERNEL_ELF) > $(DISASM_TMP)
 	@vim $(DISASM_TMP)
 	@rm $(DISASM_TMP)
 
 run: run-inner
-	@echo "Running the kernel..."
 
 run-inner: build
 	@qemu-system-riscv64 \
@@ -75,4 +75,9 @@ debug: build
 		tmux -2 attach-session -d
 
 gdbserver: build
-	@qemu-
+	@qemu-system-riscv64 -machine virt -nographic -bios $(BOOTLOADER) -device loader,file=$(KERNEL_BIN),addr=$(KERNEL_ENTRY_PA) -s -S
+
+gdbclient:
+	@riscv64-unknown-elf-gdb -ex 'file $(KERNEL_ELF)' -ex 'set arch riscv:rv64' -ex 'target remote localhost:1234'
+
+.PHONY: build env kernel clean disasm disasm-vim run-inner gdbserver gdbclient
